@@ -13,3 +13,13 @@ eggs/
 parts/
 src/
 var/
+### Node ###
+# Logs
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# Yarn Integrity file
+.yarn-integrity
