@@ -1,0 +1,8 @@
+({
+    baseUrl: "./ftw/htmlblock/browser/resources",
+    paths: {
+        jquery: "empty:",
+    },
+    name: "main",
+    out: "./ftw/htmlblock/browser/resources/htmlblock-compiled.js"
+})
