@@ -1,0 +1,1 @@
+require(['iframe_check'], function(iframe_check){});
