@@ -1,15 +1,12 @@
 <registry>
 
-    <record name="plone.types_not_searched"
-            interface="Products.CMFPlone.interfaces.controlpanel.ISearchSchema"
-            field="types_not_searched">
-        <value purge="false">
-            <element>ftw.htmlblock.HtmlBlock</element>
-        </value>
-    </record>
+    <records prefix="plone.resources/htmlblock"
+           interface='Products.CMFPlone.interfaces.IResourceRegistry'
+           remove="True"/>
 
     <records prefix="plone.bundles/ftw-htmlblock-resources"
              interface='Products.CMFPlone.interfaces.IBundleRegistry'>
+        <value key="resources" purge="True"></value>
         <value key="enabled">True</value>
         <value key="depends">plone</value>
         <value key="stub_js_modules">jquery</value>
